- Removed Content/Feature.
! Broken/Alert

~~~~~~~~~~~~0.0.1 Revitalize 1-18-2023 xx.xx P.M~~~~~~~~~~~~~~
+Successfully generated out output recipes for all geode crushers into ProcessingRecipe format.
+Updated GeodeCrushers to take a random recipe and use that to generate it's outputs.
~Processing recipes now properly take item chance to obtain into considerations when generating outputs.

~~~~~~~~~~~~0.0.1 Revitalize 1-17-2023 xx.xx P.M~~~~~~~~~~~~~~
+Added in conversion method to convert old JsonCraftingRecipe files for machines into the new ProcessingRecipe format.
    ~Also converted all of the old machine recipes as well, but need to run extensive testing on them first.
+Added support for ItemRecipeDropInMachines to handle recipes with multiple inputs and multiple outputs.
    ~Fixed a bug where AdvancedCharcoalKilns would crash with Automate due to not properly broadcasting a sprite using the machine's game location.

~~~~~~~~~~~~0.0.1 Revitalize 1-16-2023 xx.xx P.M~~~~~~~~~~~~~~
+Continued to work on code to migrate old machine processing recipes from CraftingRecipe class to ProcessingRecipe class rebuilt with machines in mind.

~~~~~~~~~~~~0.0.1 Revitalize 1-10-2023 xx.xx P.M~~~~~~~~~~~~~~
~TextureManagers now can recover from missing asset errors if a image is moved to a different folder inside of it's search params.
~Added AdvancedBatteryPackGenerator
~Fixed some issues with loading category names
~Migrated BatteryGenerators to the recipe format.
~Added a way to keep track of what items the player has obtained.
~Rewrote more code where now performObjectDropInAction->performItemDropinAction to prevent consuming the player's active item.
~Fixed mining drills not working
~Fixed HayMakers not working by renaming the recipe book.json
~Fixed an issue where interacting with HayMakers with edible items would bring up the edibility prompt.

~~~~~~~~~~~~0.0.1 Revitalize 1-9-2023 xx.xx P.M~~~~~~~~~~~~~~